added html tag with manifest attribute

--- a/guptinal-i/jsto/localImage/localImg.html
+++ b/guptinal-i/jsto/localImage/localImg.html
@@ -1,3 +1,4 @@
+<html manifest="generic.manifest">
 <meta name=viewport content="width=device-width; initial-scale=1.5; maximum-scale=4.0; minimum-scale=0.7;" />
 <title>Local Image</title>
 <body>
@@ -71,3 +72,4 @@ pkg.starter.exposeClassNames( pkg );
 
 pkg.starter.start();
 </script>
+</html>
