twigbud.htm config

--- a/baolte-g/node-js-projects/lipaotwig/pub_html/body-nbsp/twigbud.htm
+++ b/baolte-g/node-js-projects/lipaotwig/pub_html/body-nbsp/twigbud.htm
@@ -1,2 +1,10 @@
+<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
 <body>&nbsp;</body>
-<script src=/ts/text/?i=604></script>
+<script src=js/ts604.js></script>
+<script src=js/ts602.js&_cfg></script>
+<script>
+//6-1-2016 twigbud.htm config
+js604= pkg;
+js604.appTool.exposeClassNames( js604 );
+js604.starter.start(cfg);
+</script>
