--- a/baolte-g/node-js-projects/lipaotwig/pub_html/twigbud.html
+++ b/baolte-g/node-js-projects/lipaotwig/pub_html/twigbud.html
@@ -1,7 +1,7 @@
 <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
 <body>&nbsp;</body>
 <script src=js/ts604.js></script>
-<script src=js/ts602.js&_cfg></script>
+<script src=js/ts602.js?_cfg></script>
 <script>
 //6-1-2016 twigbud.htm config
 js604= pkg;
