--- a/guptinal-i/jsto/localImage/localImg.html
+++ b/guptinal-i/jsto/localImage/localImg.html
@@ -5,6 +5,7 @@
 </body>
 <script src=js/ts604.js></script>
 <script>
+//11-5-2016 jchoy v0.131 textarea
 //6-6-2016 jchoy v0.129 resize
 //5-26-2016 jchoy v0.112 local image
 //-----
@@ -29,7 +30,8 @@ SnApp= function(){
     this.addEl('input',fm).type= "button";
     this._.value= "% Resize";
     this._.onclick= function(){$t.doResize(this)}
-    this.addEl('br');
+    this.addEl('br',fm);
+    this.addEl('textarea',fm);
     return fm;
   }
   this.useFile= function(files){
@@ -54,8 +56,8 @@ SnApp= function(){
       var sca= parseFloat(el.form.pctScale.value)/100;
       this.cnv.width=  this.img.width * sca;
       this.cnv.height= this.img.height * sca;
-      this.cnv.addEventListener('mousedown',
-        function(evt){$t.cnvClick(evt)} );
+      this.cnv.onmousedown=
+        function(evt){$t.cnvClick(evt)}
       this.cnv.getContext('2d').drawImage(this.img, 0,0, this.cnv.width, this.cnv.height);
   }
   this.cnvClick= function(evt){
