--- a/baolte-g/node-js-projects/lipaotwig/pub_html/ct.htm
+++ b/baolte-g/node-js-projects/lipaotwig/pub_html/ct.htm
@@ -5,12 +5,12 @@
 <script src=js/ts604.js></script>
 <script>
 //1-13-17 jchoy CmdTable
-//1-20-17 jchoy v0.176 localTxt, TmpFS.log, cmdhist.txt, trunc
+//1-20-17 jchoy v0.182 EventCom, TmpFS.del
 //——-
 function CmdTable(){
   new SnAppFdn().inherit( this, SnLiteLoader );
   new SnAppFdn().inherit( this, Bic );
-  this.ver= '0.176';
+  this.ver= '0.182';
   var $t= this;
   this.cmdMods= [ {doCmd: function(at){
       if (at[0].toLowerCase()=='ver') return $t.ver;}} ];
@@ -23,7 +23,11 @@ function CmdTable(){
     this._.parentNode.colSpan = 2;
     this._.focus();
     new CmdMod01().addCmdMods( 'cmdmods.txt', this );
+    tmpfs.addEventListener( function(e){$t.onFsMod(e)}, 'FILEMOD' );
     return this;
+  }
+  this.onFsMod= function(evt){
+    if (evt.message=='cmdmods.txt') new CmdMod01().addCmdMods('cmdmods.txt', $t);
   }
   this.writeRow= function(s){
     var cell, row= this.insertRow(this.rows.length?1:0);
@@ -75,6 +79,9 @@ function CmdMod02(){
       var res= at.slice(2,99).join(' ')
       return [tmpfs.write(at[1], res), at[1]+' '+res.length][1];
     }
+    if (at0 == 'RM'){
+      return [(tmpfs.exist(at[1]))?'deleted':'not found',tmpfs.del(at[1])][0];
+    }
     if (at0 == 'APPEND'){
       var pm= (at[2]=='/c')? ['',3] : ['\n',2];
       var res=  pm[0]+at.slice(pm[1],99).join(' ')
@@ -115,6 +122,7 @@ function LocalJs(){
 }
 //——-
 function TmpFs(){
+  new SnAppFdn().inherit( this, EventCom );
   this.files= {};
   this.logGroups= {log:'log.txt', err:'err.txt', cmd:'cmdhist.txt'};
   this.getInst= function(){
@@ -123,12 +131,14 @@ function TmpFs(){
   }
   this.exist= function(fn){ return (this.files[fn])? true:false; }
   this.read= function(fn){ return this.files[fn]; }
-  this.write= function(fn, val){ this.files[fn]= val; }
-  this.append= function(fn, val){ this.files[fn]+= val; }
+  this.write= function(fn, val){ this.alertMod(fn); this.files[fn]= val; }
+  this.append= function(fn, val){ this.alertMod(fn); this.files[fn]+= val; }
+  this.del= function(fn){ this.alertMod(fn); delete(this.files[fn]) }
   this.trunc= function(fn, len){
     if ((!this.exist(fn)) || (this.files[fn].length<len)) return;
     this.files[fn]= this.files[fn].substr(this.files[fn].length-len);
   }
+  this.alertMod= function(fn){ this.alertEvent( 'FILEMOD', this, fn ) }
   this.list= function( sep ){
     var res=[];
     for (var m in this.files) res.push(m);
@@ -138,7 +148,19 @@ function TmpFs(){
     for (var m in this.logGroups) if (grp==m) (function(fn,t){
         if (!t.exist(fn)) t.write(fn,'');
         t.append( fn, new Date().toLocaleString()+' '+s+'\n' );
-        t.trunc(fn,10000); })(this.logGroups[m], this);
+        t.trunc(fn,10000); })( this.logGroups[m], this );
+  }
+}
+//——-
+function EventCom(){
+  this.listeners= {};
+  this.alertEvent= function( evtName, tgt, msg ){
+    var ls= (this.listeners[evtName])? this.listeners[evtName] :[];
+    for (var i=0; i<ls.length; i++) ls[i]( {target:tgt, message:msg} );
+  }
+  this.addEventListener= function( fcn, evtName ){
+    if (!this.listeners[evtName]) this.listeners[evtName]=[];
+    this.listeners[evtName].push(fcn);
   }
 }
 //——-
@@ -170,9 +192,8 @@ function Starter(){
     tmpfs.write( 'help.txt','ver - app version'
       +'\nlink [url] - create hyperlink'
       +'\nloadjs [url] - src js file'
-      +'\nlocaljs - file button to load js file'
-      +'\nlocaltxt, eval'
-      +'\ncat, write, append, ls - file operations' );
+      +'\nlocaljs, localtxt - file button to load file'
+      +'\ncat, write, append, rm, ls, evaljs - file operations' );
     tmpfs.write( 'todo.txt','edit, clear, live, feed' );
   }
 }
