--- a/baolte-g/node-js-projects/lipaotwig/pub_html/ct.htm
+++ b/baolte-g/node-js-projects/lipaotwig/pub_html/ct.htm
@@ -5,12 +5,12 @@
 <script src=js/ts604.js></script>
 <script>
 //1-13-17 jchoy CmdTable
-//1-20-17 jchoy v0.182 EventCom, TmpFS.del
+//1-20-17 jchoy v0.186 fix TmpFS.alertMod
 //——-
 function CmdTable(){
   new SnAppFdn().inherit( this, SnLiteLoader );
   new SnAppFdn().inherit( this, Bic );
-  this.ver= '0.182';
+  this.ver= '0.186';
   var $t= this;
   this.cmdMods= [ {doCmd: function(at){
       if (at[0].toLowerCase()=='ver') return $t.ver;}} ];
@@ -49,7 +49,7 @@ function CmdTable(){
   }
 }
 //——-
-function CmdMod01(cap){
+CmdMod01= function(cap){
   this.cap=cap;
   this.doCmd= function( at ){
     var at0= at[0].toUpperCase();
@@ -63,12 +63,13 @@ function CmdMod01(cap){
         [eval(tmpfs.read(at[1])), at[1]][1];
   }
   this.addCmdMods= function( fn, cap ){
+    tmpfs.log( 'log', 'addCmdMods' );
     for (var i=0,at= tmpfs.read(fn).split('\n'); i<at.length; i++)
       cap.cmdMods.push( new window[at[i]](cap) );
   }
 }
 //——-
-function CmdMod02(){
+CmdMod02= function(){
   this.doCmd= function( at ){
     var at0= at[0].toUpperCase();
     if (at0 == 'HELP')
@@ -131,9 +132,9 @@ function TmpFs(){
   }
   this.exist= function(fn){ return (this.files[fn])? true:false; }
   this.read= function(fn){ return this.files[fn]; }
-  this.write= function(fn, val){ this.alertMod(fn); this.files[fn]= val; }
-  this.append= function(fn, val){ this.alertMod(fn); this.files[fn]+= val; }
-  this.del= function(fn){ this.alertMod(fn); delete(this.files[fn]) }
+  this.write= function(fn, val){  this.files[fn]= val;  this.alertMod(fn); }
+  this.append= function(fn, val){ this.files[fn]+= val; this.alertMod(fn); }
+  this.del= function(fn){       delete(this.files[fn]); this.alertMod(fn); }
   this.trunc= function(fn, len){
     if ((!this.exist(fn)) || (this.files[fn].length<len)) return;
     this.files[fn]= this.files[fn].substr(this.files[fn].length-len);
@@ -193,8 +194,8 @@ function Starter(){
       +'\nlink [url] - create hyperlink'
       +'\nloadjs [url] - src js file'
       +'\nlocaljs, localtxt - file button to load file'
-      +'\ncat, write, append, rm, ls, evaljs - file operations' );
-    tmpfs.write( 'todo.txt','edit, clear, live, feed' );
+      +'\ncat, write, append, rm, ls, eval - file operations' );
+    tmpfs.write( 'todo.txt','edit, clear, live, feed, serve. ls-col' );
   }
 }
 new Starter().start();
