--- a/baolte-g/node-js-projects/lipaotwig/pub_html/ct.htm
+++ b/baolte-g/node-js-projects/lipaotwig/pub_html/ct.htm
@@ -5,24 +5,24 @@
 <script src=js/ts604.js></script>
 <script>
 //1-13-17 jchoy CmdTable
-//1-20-17 jchoy v0.186 fix TmpFS.alertMod
+//1-21-17 jchoy v0.187 use tbl in addcmdmods
 //——-
 function CmdTable(){
   new SnAppFdn().inherit( this, SnLiteLoader );
   new SnAppFdn().inherit( this, Bic );
-  this.ver= '0.186';
+  this.ver= '0.187';
   var $t= this;
   this.cmdMods= [ {doCmd: function(at){
       if (at[0].toLowerCase()=='ver') return $t.ver;}} ];
   this.init= function(tbl){
     for (var m in this) tbl[m]= this[m];
-    tbl.border = "1";
+    ($t=tbl).border = "1";
     tbl.style.borderCollapse= 'collapse';
     this.addEl('input',tbl.writeRow('$')).size=45;
     this._.onkeypress= function(){ tbl.doTxInput(this) };
     this._.parentNode.colSpan = 2;
     this._.focus();
-    new CmdMod01().addCmdMods( 'cmdmods.txt', this );
+    new CmdMod01().addCmdMods( 'cmdmods.txt', $t );
     tmpfs.addEventListener( function(e){$t.onFsMod(e)}, 'FILEMOD' );
     return this;
   }
