--- a/baolte-g/node-js-projects/lipaotwig/pub_html/ct.htm
+++ b/baolte-g/node-js-projects/lipaotwig/pub_html/ct.htm
@@ -5,12 +5,12 @@
 <script src=js/ts604.js></script>
 <script>
 //1-13-17 jchoy CmdTable
-//1-28-17 jchoy v0.192 RunOnce, EventCom.delEventListener
+//1-28-17 jchoy v0.193 RunOnce.cook
 //——-
 function CmdTable(){
   new SnAppFdn().inherit( this, SnLiteLoader );
   new SnAppFdn().inherit( this, Bic );
-  this.ver= '0.192';
+  this.ver= '0.193';
   var $t= this;
   this.cmdMods= [ {doCmd: function(at){
       if (at[0].toLowerCase()=='ver') return $t.ver;}} ];
@@ -180,8 +180,13 @@ RunOnce= function(){
     this.cap= cap;
     tmpfs.addEventListener( function(e){$t.onFsMod(e)}, "FILEMOD" );
     var run= cap.cgi( "run", "", location );
-    if (run) tmpfs.write( "runonce.txt", decodeURIComponent(run) );
+    if (run) tmpfs.write( "runonce.txt", decodeURIComponent(run) ); else this.cook();
     return "setup done";
+  }
+  this.cook= function(){
+    for (var ap,i=0,at= document.cookie.split(" ;"); i<at.length; i++)
+      if (at[i].indexOf("runonce=")==0)
+        tmpfs.write( "runonce.txt", decodeURIComponent(at[i].split("=")[1]) );
   }
   this.onFsMod= function(ev){
     if (ev.message !='runonce.txt') return;
