--- a/baolte-g/node-js-projects/job-techa/ericve25-challenge.htm
+++ b/baolte-g/node-js-projects/job-techa/ericve25-challenge.htm
@@ -126,6 +126,16 @@ Response to tech assessment challenge at:
     ]
   }
 ]</textarea>
+<hr />
+Server Test<br />
+<form action="https://lipaotwig-jcc9.c9users.io/distribution" method="POST">
+ <textarea name="orders"></textarea>
+ <input type=submit value=Price>
+ <input type=button value="Distribution"
+ onclick="this.form.action='https://lipaotwig-jcc9.c9users.io/distribution';this.form.submit()">
+<form>
+
+
 <script src=orderfees.js></script>
 <script>
 new OrderFees().start();
